Sprint 3:- 1) Completed the following task a) Quick jot b) Issue jot c) Task jot d) Note jot. 2) Quick jot edit functionality. 3) Implemented the functionality of jot button. 4) Implemented the functionality of user Login & Register as well as forget password. 5) Hotel listing & remove functionality has been implemented

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,9 @@
       <body style="height: auto;">
         <header ng-if="isAuth"><!--@header template--> </header>
 
-        <div class="left_side_menu
+        <div ng-if="isAuth.sidebar=='yes'" class="left_side_menu
         " ng-class="{'leftopen':leftopen}"   ng-include="'/modules/partials/sidebar.html'"></div>
+
         <ng-view class="view"> </ng-view>
 
         
